==> MrAlexZhang/RFID7970-getuid/User/TRF7970WX/spi.c <==
#include "spi.h"
#include "trf797x.h"
#include "hardware.h"

void SpiDirectCommand(u8 *pbuf)
{	
  GPIO_ResetBits(GPIOB,GPIO_Pin_12);						// Start SPI Mode
  // set Address/Command Word Bit Distribution to command
  *pbuf = (0x80 | *pbuf);					// command
  *pbuf = (0x9f &*pbuf);					// command code
  
  /* Wait for SPI1 Tx buffer empty */
  while(SPI_I2S_GetFlagStatus(SPI2,SPI_I2S_FLAG_TXE) == RESET)
  {
  }  
  /* Send byte through the SPI1 peripheral */
  SPI_I2S_SendData(SPI2,*pbuf);	  
  
  /* Wait for SPI1 data reception	*/
  while(SPI_I2S_GetFlagStatus(SPI2,SPI_I2S_FLAG_RXNE) == RESET)
  {
  }  
  /* Read & return SPI1 received data	*/
  temp=SPI_I2S_ReceiveData(SPI2);
  
  while (SPI_I2S_GetFlagStatus(SPI2,SPI_I2S_FLAG_BSY)==SET)
  {
  }

  
   GPIO_SetBits(GPIOB,GPIO_Pin_12);	 						//Stop SPI Mode
  
  //P3SEL |=  BIT3;      					//Revert Back
}

void 
SpiRawWrite(u08_t *pbuf, u08_t length)
{	
  SLAVE_SELECT_LOW; 						//Start SPI Mode
  while(length > 0)
  {	
    //                while (!(IFG2 & UCB0TXIFG));		// USCI_B0 TX buffer ready?
    //		{	
    //		}
    //
    //		UCB0TXBUF = *pbuf;				// Previous data to TX, RX
    //
    //		while(UCB0STAT & UCBUSY)
    //		{
    //		}
    //
    //		temp=UCB0RXBUF;
    
    /* Wait for SPI2 Tx buffer empty */
    //while(SPI_GetFlagStatus(SPI_I2S_FLAG_TXE) == RESET)
		while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET)//SPI_I2S_GetFlagStatus
    {
    }  
    /* Send byte through the SPI2 peripheral */
    //SPI_SendData(*pbuf);	
    SPI_I2S_SendData(SPI2, *pbuf);		
    
    /* Wait for SPI2 data reception	*/
    //while(SPI_GetFlagStatus(SPI_I2S_FLAG_TXE) == RESET)
		while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_RXNE) == RESET)//SPI_I2S_GetFlagStatus
    {
    }  
    /* Read & return SPI2 received data	*/
    temp=SPI_I2S_ReceiveData(SPI2);
    
    pbuf++;
    length--;
  }
  //	while(UCB0STAT & UCBUSY)
  //	{
  //	}
  
	//while (SPI_GetFlagStatus(SPI_I2S_FLAG_TXE)==SET)
	while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_BSY) == SET)//SPI_I2S_GetFlagStatus
  {
  }
  SLAVE_SELECT_HIGH; 						// Stop SPI Mode		
}

void
SpiReadCont(u08_t *pbuf, u08_t length)
{	
  //u08_t	j = 0;
  
  SLAVE_SELECT_LOW; 							//Start SPI Mode
  // Address/Command Word Bit Distribution
  *pbuf = (0x60 | *pbuf); 					// address, read, continuous
  *pbuf = (0x7f &*pbuf);						// register address
//  while (!(IFG2 & UCB0TXIFG))					// USCI_B0 TX buffer ready?
//  {
//  }
//  UCB0TXBUF = *pbuf;  						// Previous data to TX, RX
//  
//  while(UCB0STAT & UCBUSY)
//  {
//  }
//  
//  temp = UCB0RXBUF;
  
  /* Wait for SPI2 Tx buffer empty */
    //while(SPI_GetFlagStatus(SPI_I2S_FLAG_TXE) == RESET)
	while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET)//SPI_I2S_GetFlagStatus
    {
    }  
    /* Send byte through the SPI2 peripheral */
    //SPI_SendData(*pbuf);
    SPI_I2S_SendData(SPI2, *pbuf); 
    
    /* Wait for SPI2 data reception	*/
    //while(SPI_GetFlagStatus(SPI_I2S_FLAG_TXE) == RESET)
		while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_RXNE) == RESET)//SPI_I2S_GetFlagStatus
    {
    }  
    /* Read & return SPI2 received data	*/
    temp=SPI_I2S_ReceiveData(SPI2);
  //UCB0CTL0 &= ~UCCKPH;
  
  /*_NOP();
  _NOP();
  _NOP();
  _NOP();
  _NOP();
  _NOP();
  _NOP();
  
  if(*pbuf != 0x6C)							// execute only when IRQRead is not called
  {	
  if (length != 0x1F)
  {	
  for (j=0;j<2;j++)
  {	
  while (!(IFG2 & UCB0TXIFG))		// USCI_B0 TX buffer ready?
  {
}
  UCB0TXBUF = 0x00; 				// Receive initiated by a dummy TX write
  
  while(UCB0STAT & UCBUSY)
  {
}
  _NOP();
  _NOP();
  temp = UCB0RXBUF;
}
}
}*/
  while(length > 0)
  {	
//    while (!(IFG2 & UCB0TXIFG))
//    {
//    }
//    UCB0TXBUF = 0x00; 					// Receive initiated by a dummy TX write
//    
//    while(UCB0STAT & UCBUSY)
//      //while (!(IFG2 & UCB0RXIFG));
//    {
//    }
    
    /* Wait for SPI2 Tx buffer empty */
    //while(SPI_GetFlagStatus(SPI_I2S_FLAG_TXE) == RESET)
		while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET)//SPI_I2S_GetFlagStatus
    {
    }  
    /* Send byte through the SPI2 peripheral */
    //SPI_SendData(0x00);	
    SPI_I2S_SendData(SPI2, 0x00);		
    
    /* Wait for SPI2 data reception	*/
    //while(SPI_GetFlagStatus(SPI_I2S_FLAG_TXE) == RESET)
		while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_RXNE) == RESET)//SPI_I2S_GetFlagStatus
    {
    }  
    
    
    //_NOP();
    //_NOP();
    //_NOP();
    //_NOP();
    //_NOP();
    //_NOP();
    //_NOP();
    //_NOP();
    
//    *pbuf = UCB0RXBUF;
    /* Read & return SPI2 received data	*/
    *pbuf=SPI_I2S_ReceiveData(SPI2);
    pbuf++;
    length--;
  }
  //UCB0CTL0 |= UCCKPH;
//  while(UCB0STAT & UCBUSY)
//  {
//  }
  //while (SPI_GetFlagStatus(SPI_I2S_FLAG_TXE)==SET)
	while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_BSY) == SET)//SPI_I2S_GetFlagStatus
  {
  }
  SLAVE_SELECT_HIGH; 						// Stop SPI Mode
  
}

void SpiReadSingle(u8 *pbuf, u8 number)
{			
  GPIO_ResetBits(GPIOB,GPIO_Pin_12);	 						
  while(number > 0)
  {	
    // Address/Command Word Bit Distribution
    *pbuf = (0x40 | *pbuf); 			// address, read, single
    *pbuf = (0x5f & *pbuf);				// register address
    
//    while (!(IFG2 & UCB0TXIFG))			// USCI_B0 TX buffer ready?
//    {
//    }
//    UCB0TXBUF = *pbuf;					// Previous data to TX, RX
//    
//    while(UCB0STAT & UCBUSY)
//    {
//    }
//    
//    temp=UCB0RXBUF;
    
    /* Wait for SPI1 Tx buffer empty */
    while(SPI_I2S_GetFlagStatus(SPI2,SPI_I2S_FLAG_TXE) == RESET)
  {
  }    
    /* Send byte through the SPI1 peripheral */
    SPI_I2S_SendData(SPI2,*pbuf);	   
    
    /* Wait for SPI1 data reception	*/
  while(SPI_I2S_GetFlagStatus(SPI2,SPI_I2S_FLAG_RXNE) == RESET)
  {
  }   
    /* Read & return SPI1 received data	*/
    temp=SPI_I2S_ReceiveData(SPI2);
    
    
    /* Wait for SPI1 Tx buffer empty */
    while(SPI_I2S_GetFlagStatus(SPI2,SPI_I2S_FLAG_TXE) == RESET)
    {
    }  
    /* Send byte through the SPI1 peripheral */
    SPI_I2S_SendData(SPI2,0x00);	  
    
    /* Wait for SPI1 data reception	*/
     while(SPI_I2S_GetFlagStatus(SPI2,SPI_I2S_FLAG_RXNE) == RESET)
    {
    }  
		//mod_control[0]=0;
    /* Read & return SPI1 received data	*/
    *pbuf=SPI_I2S_ReceiveData(SPI2);
    pbuf++;
    number--;
  }
  while (SPI_I2S_GetFlagStatus(SPI2,SPI_I2S_FLAG_BSY)==SET)
  {
  }
//  if(direct_mode == 0x00)
  {
    GPIO_SetBits(GPIOB,GPIO_Pin_12);	 						//Stop SPI Mode
  }
}

void
SpiWriteCont(u08_t *pbuf, u08_t length)
{	
  SLAVE_SELECT_LOW; 						// Start SPI Mode
  // Address/Command Wort Bit Distribution
  *pbuf = (0x20 | *pbuf); 				// address, write, continuous
  *pbuf = (0x3f &*pbuf);					// register address
  while(length > 0)
  {	
//    while (!(IFG2 & UCB0TXIFG))			// USCI_B0 TX buffer ready?
//    {
//    }
//    UCB0TXBUF = *pbuf;					// Previous data to TX, RX
//    while(UCB0STAT & UCBUSY)
//      //while (!(IFG2 & UCB0RXIFG))
//    {
//    }
//    temp = UCB0RXBUF;
    
    /* Wait for SPI2 Tx buffer empty */
    //while(SPI_GetFlagStatus(SPI_I2S_FLAG_TXE) == RESET)
		while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET)//SPI_I2S_GetFlagStatus
    {
    }    
    /* Send byte through the SPI2 peripheral */
    //SPI_SendData(*pbuf);	
    SPI_I2S_SendData(SPI2, *pbuf); 		
    
    /* Wait for SPI2 data reception	*/
    //while(SPI_GetFlagStatus(SPI_I2S_FLAG_TXE) == RESET)
		while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_RXNE) == RESET)//SPI_I2S_GetFlagStatus
    {
    }   
    /* Read & return SPI2 received data	*/
    temp = SPI_I2S_ReceiveData(SPI2);
    
    pbuf++;
    length--;
  }
//  while(UCB0STAT & UCBUSY)
//  {
//  }
  //while (SPI_GetFlagStatus(SPI_I2S_FLAG_TXE)==SET)
	while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_BSY) == SET)//SPI_I2S_GetFlagStatus
  {
  }
  //_NOP();
  //_NOP();
  //_NOP();
  //_NOP();
  //_NOP();
  //_NOP();
  
  SLAVE_SELECT_HIGH; 						// Stop SPI Mode
}

void
SpiWriteSingle(u8 *pbuf, u8 length)
{
  u8	i = 0;
  
 GPIO_ResetBits(GPIOB,GPIO_Pin_12);						// Start SPI Mode
  
  while(length > 0)
  {	
    // Address/Command Word Bit Distribution
    // address, write, single (fist 3 bits = 0)
    *pbuf = (0x1f &*pbuf);				// register address
    for(i = 0; i < 2; i++)
    {	
//      while (!(IFG2 & UCB0TXIFG))		// USCI_B0 TX buffer ready?
//      {
//      }
//      UCB0TXBUF = *pbuf;  			// Previous data to TX, RX
//      
//      while(UCB0STAT & UCBUSY)
//      {
//      }
//      
//      temp = UCB0RXBUF;
      /* Wait for SPI1 Tx buffer empty */
			SPI_I2S_ClearFlag(SPI2,SPI_I2S_FLAG_TXE);
  while(SPI_I2S_GetFlagStatus(SPI2,SPI_I2S_FLAG_TXE) == RESET)
  {
  }    
    /* Send byte through the SPI1 peripheral */
    SPI_I2S_SendData(SPI2,*pbuf);	   
    
    /* Wait for SPI1 data reception	*/
  while(SPI_I2S_GetFlagStatus(SPI2,SPI_I2S_FLAG_RXNE) == RESET)
  {
  }   
    /* Read & return SPI1 received data	*/
    temp=SPI_I2S_ReceiveData(SPI2);
      
      pbuf++;
      length--;
    }
  }
//  while(UCB0STAT & UCBUSY)
//  {
//  }
  while (SPI_I2S_GetFlagStatus(SPI2,SPI_I2S_FLAG_BSY)==SET)
  {
  }
  
//  if(direct_mode == 0x00)
  {
    GPIO_SetBits(GPIOB,GPIO_Pin_12);	 						//Stop SPI Mode
  }
}
